[package]
name = "tmux-agent-sidebar"
version = "0.2.6"
edition = "2024"
license = "MIT"
description = "A tmux sidebar that monitors AI coding agents across all windows and sessions in real-time"
repository = "https://github.com/hiroppy/tmux-agent-sidebar"

[dependencies]
ratatui = "0.29"
crossterm = "0.29"
unicode-width = "0.2"
libc = "0.2"
indexmap = "2.13.1"
serde_json = "1"

[dev-dependencies]
indoc = "2"

[profile.release]
strip = true
lto = true
